--- a/collections/ansible_collections/aise/dsu/playbooks/50_docker_prepare.yml
+++ b/collections/ansible_collections/aise/dsu/playbooks/50_docker_prepare.yml
@@ -6,24 +6,37 @@
     pwd: "{{ lookup('pipe', 'pwd') }}"
   pre_tasks:
     # TODO fix this for arm64
-    # - name: Install docker
-      # include_role:
-        # name: geerlingguy.docker
-      # vars:
-        # docker_users:
-          # - root
-      # tags: docker-install
+    - name: Install docker on amd64
+      include_role:
+        name: geerlingguy.docker
+      vars:
+        docker_users:
+          - root
+      tags: docker-install
+      when: type == 'vm'
+
+    - name: Install docker on arm64
+      include_role:
+        name: buluma.docker
+      vars:
+        docker_privileged_users:
+          - root
+      tags: docker-install
+      when: type != 'vm'
+
     - name: Install python docker deps
+      tags: docker-install
       pip:
         name: docker
 
   tasks:
     - name: Upload source code
+      tags: update-source-code
       block:
         - name: Clone code repo
           git:
             repo: 'git@github.com:industrial-immersion/FLModel.git'
-            version: main
+            version: master
             dest: /tmp/code
             depth: 1
           delegate_to: localhost
@@ -48,11 +61,18 @@
     - name: Create systemd file to manage the docker containers
       template:
         src: flwr-model.service.j2
-        dest: /etc/systemd/system/flwr-model.service
+        dest: /etc/systemd/system/flwr-model@.service
+      notify: reload-systemd
       vars:
         systemd_working_dir: "{{ dataset_dir }}"
+        flmodel_role: "{{ 'server' if inventory_hostname in groups['servers'] else 'client' }}"
 
     - name: Pull image
       community.docker.docker_image:
         name: "{{ docker_image }}"
         source: pull
+  handlers:
+    - name: Reload systemd service files
+      systemd:
+        daemon_reload: true
+      listen: reload-systemd
