Set private key

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 
 inventory  = inventory.yml
+private_key_file = ~/.ssh/aise-dsu
 collections_paths = ./deps/collections:./collections
 roles_path = ./deps/roles
 host_key_checking = no
